[package]
name = "vpnclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.3"
boxed-array = "0.1.0"
clap = { version = "4.1.13", features = ["derive"] }
lazy_static = "1.4.0"
mio-tun = { version = "0.1.0", path = "./mio-tun" }
openssl = "0.10.45"
serde = { version = "1.0.160", features = ["derive"] }
vpnmessaging = { version = "0.1.0", path = "./vpnmessaging" }

[dev-dependencies]
criterion = "0.4.0"
etherparse = "0.13.0"

[[bench]]
name = "connection_bench"
harness = false

[profile.dev.package."*"]
opt-level = 3
